# smallsh

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  README.txt  README_8md.html  _2home_2runner_2work_2smallsh_2smallsh_2include_2utils_2string-iterator_8h-example.html  annotated.html  build.sh  builtins_8c.html  builtins_8c_source.html  builtins_8h.html  builtins_8h_source.html  cd_8c.html  cd_8c_source.html  cd_8h.html  cd_8h_source.html  channel_8c.html  channel_8c_source.html  channel_8h.html  channel_8h_source.html  classes.html  dir_14a61794dcadf084e594875eaea41790.html  dir_14e1e259e8275dc0c459acef3bbf05ae.html  dir_1909b13b6d0cbcc1d36d622424b54e1c.html  dir_302f5eee407544366bbda3d8f74a52cf.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_4904b5727094acb85f1fb3ce4b540d24.html  dir_5784360009d1ef95205a0048ad26d28c.html  dir_661483514bb8dea267426763b771558e.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_821002d4f10779a80d4fb17bc32f21f1.html  dir_a512c53f36df535e3dc82ed0ecfabf79.html  dir_b8cc2b120531299a0265b577628cc328.html  dir_c33611b4dec78f96017d2ccf425d656a.html  dir_d44c64559bbebec7f509842c48db8b23.html  dto_8h.html  dto_8h_source.html  (+153 more)
.github/workflows/: documentation.yaml
cmake/: cmocka.cmake
docs/: index.md
examples/: CMakeLists.txt  demo-parser.c
include/: error.h  globals.h  lexer.h  node-stack.h  node.h  parser.h  shell-tokens.h  smallsh.h  string-iterator.h  token-iterator.h  token.h
include/builtins/: builtins.h  cd.h  exit.h  status.h
include/core/: dtos.h  error.h  shell-attrs.h
include/events/: channel.h  dto.h  events.h  receiver.h  sender.h
include/interpreter/: lexer.h  parser.h  statement.h  token-iterator.h  token.h
include/job-control/: job-control.h  job-table.h  job.h  process.h
include/parser/: lexer.h  parser.h  shell-tokens.h  statement.h  token.h
include/shell/: signal-handlers.h
include/signals/: dispatcher.h  handler.h  installer.h
include/utils/: stack.h  string-iterator.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  (+61 more)
src/: CMakeLists.txt  error.c  lexer.c  main.c  node-stack.c  node.c  parser.c  shell-tokens.c  smallsh.c  string-iterator.c  token-iterator.c  token.c
src/builtins/: builtins.c  cd.c  exit.c  status.c
src/events/: channel.c  dto.c  events.c  receiver.c  sender.c
src/interpreter/: lexer.c  parser.c  shell-tokens.c  statement.c  token-iterator.c  token.c
src/job-control/: job-control.c  job-table.c  job.c  process.c
src/parser/: lexer.c  node-stack.c  node.c  parser.c  shell-tokens.c  statement.c  token-iterator.c  token.c
src/shell/: signal-handlers.c
src/signals/: dispatcher.c  handler.c  installer.c
src/utils/: string-iterator.c
tests/: CMakeLists.txt  test-lexer.c  test-main.c  test-node-stack.c  test-node.c  test-parser.c  test-shell-tokens.c  test-string-iterator.c  test-token-iterator.c  test-token.c
tests/integration/: test-badfile.sh  test-bg.sh  test-cd.sh  test-comment.sh  test-fg-only-mode.sh  test-pid-expansion.sh  test-redirection.sh  test-sigterm.sh
tests/interpreter/unit/: CMakeLists.txt  test-lexer.c  test-parser.c  test-shell-tokens.c  test-token-iterator.c  test-token.c
tests/job-control/unit/: CMakeLists.txt  test-job-table.c
tests/parser/unit/: CMakeLists.txt  test-lexer.c  test-node-stack.c  test-node.c  test-parser.c  test-shell-tokens.c  test-token-iterator.c  test-token.c
tests/utils/unit/: CMakeLists.txt  test-string-iterator.c
