add_executable(
        demo-parser
        demo-parser.c
        "${PROJECT_SOURCE_DIR}/src/interpreter/parser.c"
        "${PROJECT_SOURCE_DIR}/src/interpreter/statement.c"
        "${PROJECT_SOURCE_DIR}/src/interpreter/token-iterator.c"
        "${PROJECT_SOURCE_DIR}/src/interpreter/lexer.c"
        "${PROJECT_SOURCE_DIR}/src/interpreter/shell-tokens.c"
        "${PROJECT_SOURCE_DIR}/src/interpreter/token.c"
        "${PROJECT_SOURCE_DIR}/src/utils/string-iterator.c"
        "${PROJECT_SOURCE_DIR}/src/builtins/builtins.c"
        "${PROJECT_SOURCE_DIR}/src/builtins/cd.c"
        "${PROJECT_SOURCE_DIR}/src/builtins/status.c"
        "${PROJECT_SOURCE_DIR}/src/builtins/exit.c"
)
target_include_directories(
        demo-parser
        PRIVATE
        "${PROJECT_SOURCE_DIR}/include"
)