set(
        SOURCES
        "${PROJECT_SOURCE_DIR}/src/main.c"
        "${PROJECT_SOURCE_DIR}/src/smallsh.c"
        "${PROJECT_SOURCE_DIR}/src/shell/signal-handlers.c"
        "${PROJECT_SOURCE_DIR}/src/builtins/cd.c"
        "${PROJECT_SOURCE_DIR}/src/interpreter/parser.c"
        "${PROJECT_SOURCE_DIR}/src/interpreter/statement.c"
        "${PROJECT_SOURCE_DIR}/src/interpreter/token-iterator.c"
        "${PROJECT_SOURCE_DIR}/src/interpreter/lexer.c"
        "${PROJECT_SOURCE_DIR}/src/interpreter/shell-tokens.c"
        "${PROJECT_SOURCE_DIR}/src/interpreter/token.c"
        "${PROJECT_SOURCE_DIR}/src/utils/string-iterator.c"
)
add_executable(
        ${PROJECT_NAME}
        ${SOURCES}
)
target_include_directories(
        "${PROJECT_NAME}"
        PRIVATE
        "${PROJECT_SOURCE_DIR}/include"
)