set(
        SOURCES
        "${PROJECT_SOURCE_DIR}/src/smallsh.c"
        "${PROJECT_SOURCE_DIR}/src/error.c"
        "${PROJECT_SOURCE_DIR}/src/job-control/job-control.c"
        "${PROJECT_SOURCE_DIR}/src/job-control/job-table.c"
        "${PROJECT_SOURCE_DIR}/src/job-control/job.c"
        "${PROJECT_SOURCE_DIR}/src/job-control/process.c"
        "${PROJECT_SOURCE_DIR}/src/events/events.c"
        "${PROJECT_SOURCE_DIR}/src/events/sender.c"
        "${PROJECT_SOURCE_DIR}/src/events/receiver.c"
        "${PROJECT_SOURCE_DIR}/src/events/channel.c"
        "${PROJECT_SOURCE_DIR}/src/signals/installer.c"
        "${PROJECT_SOURCE_DIR}/src/signals/handler.c"
        "${PROJECT_SOURCE_DIR}/src/builtins/builtins.c"
        "${PROJECT_SOURCE_DIR}/src/builtins/cd.c"
        "${PROJECT_SOURCE_DIR}/src/builtins/status.c"
        "${PROJECT_SOURCE_DIR}/src/builtins/exit.c"
        "${PROJECT_SOURCE_DIR}/src/interpreter/parser.c"
        "${PROJECT_SOURCE_DIR}/src/interpreter/statement.c"
        "${PROJECT_SOURCE_DIR}/src/interpreter/token-iterator.c"
        "${PROJECT_SOURCE_DIR}/src/interpreter/lexer.c"
        "${PROJECT_SOURCE_DIR}/src/interpreter/shell-tokens.c"
        "${PROJECT_SOURCE_DIR}/src/interpreter/token.c"
        "${PROJECT_SOURCE_DIR}/src/utils/string-iterator.c"
        error.c
)
add_executable(
        ${PROJECT_NAME}
        ${SOURCES}
)
target_include_directories(
        "${PROJECT_NAME}"
        PRIVATE
        "${PROJECT_SOURCE_DIR}/include"
)